homepage + background service

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -2,8 +2,14 @@
 
 <div class="container">
 
-
-    <!-- Code here -->
+    <div class="row">
+        <div class="col col-sm-6 col-sm-offset-3 col-xs-8 col-xs-offset-2">
+            <h1>CornPub is the easiest way to find movies and tv shows online.</h1>
+            <h4 class="gray">Start browsing CornPub.</h4>
+            <a class="btn btn-primary btn-lg" ui-sref="home">Sign Up Now!</a>
+            <a class="btn btn-default btn-outline btn-lg" ui-sref="home">Browse</a>
+        </div>
+    </div>
 
 </div>
 
