--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -3,22 +3,38 @@
 
     <!-- Code here -->
     <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <div class="col-xs-5 col-sm-5 pull-left" role="search">
-                <form class="navbar-form">
-                    <div class="input-group">
-                        <input type="search" class="form-control" autocorrect="off" ng-model="search" required ng-minlength="3" placeholder="Rechercher...">
-                    </div>
-                </form>
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-umovie" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">CornPub</a>
             </div>
-            <div class="navbar-collapse collapse">
+            <form class="navbar-form navbar-left" role="search">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Search...">
+                </div>
+                <button type="submit" class="btn btn-default">
+                    <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                </button>
+            </form>
+            <div class="collapse navbar-collapse" id="navbar-collapse-umovie">
+                <ul class="nav navbar-nav">
+                    <li><a href="#">Home</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Filter<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Actors</a></li>
+                            <li><a href="#">Movies</a></li>
+                            <li><a href="#">Tv show</a></li>
+                        </ul>
+                    </li>
+                </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/">Accueil</a></li>
+                    <li><a href="#">Log out</a></li>
                 </ul>
             </div>
         </div>
