--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -23,17 +23,25 @@
             </form>
             <div class="collapse navbar-collapse" id="navbar-collapse-umovie">
                 <ul class="nav navbar-nav">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Watchlists</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Filter<span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Content<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Actors</a></li>
                             <li><a href="#">Movies</a></li>
                             <li><a href="#">Tv show</a></li>
                         </ul>
                     </li>
+                    <li>
+
+                        <a href="#"><img src="http://www.gravatar.com/avatar/fdsdfs?s=20" class="img img-circle">User123123</a>
+                    </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a class="glyphicon glyphicon-cog visible-xs">Settings</a>
+                        <a class="glyphicon glyphicon-cog hidden-xs"></a>
+                    </li>
                     <li><a href="#">Log out</a></li>
                 </ul>
             </div>
