--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -1,6 +1,7 @@
 <div class="container">
 
 
+
     <!-- Code here -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
@@ -28,7 +29,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Content<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Actors</a></li>
-                            <li><a href="#">Movies</a></li>
+                            <li><a ui-sref="movie">Movies</a></li>
                             <li><a href="#">Tv show</a></li>
                         </ul>
                     </li>
