--- a/public/views/movie.html
+++ b/public/views/movie.html
@@ -1,8 +1,77 @@
 ﻿<div ng-include="'views/navbar.html'"></div>
 
-<div class="container">
 
+<div class="container-fluid">
+    <div class="row topPage">
+        <div class="col-md-6 ">
+            <div class="row">
+                <div class="col-md-10">
+                    <h1>Fifty Shades Of Grey</h1>
+                </div>
+                <div class="col-md-2">
+                    <a href="https://geo.itunes.apple.com/fr/movie/cinquante-nuances-de-grey/id962931571?mt=6"
+                       style="display:inline-block;overflow:hidden;background:url(http://linkmaker.itunes.apple.com/images/badges/en-us/badge_itunes-lrg.svg) no-repeat;width:165px;height:40px;"></a>
+                </div>
+            </div>
+            <div class="row">
 
-    <!-- Code here -->
+                <ul class="list-inline pointedList">
+                    <li>Drama, Romance</li>
+                    <li>11 February 2015 (France)</li>
+                </ul>
+
+                <div class="row jumbotron">
+                    <div class="textInJumbotron">
+                        <p>
+                            Literature student Anastasia Steele's life changes forever when she meets handsome, yet
+                            tormented, billionaire Christian Grey.
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div id="mediaControl" class="col-md-4 col-md-8">
+                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">
+                            Bande annonce
+                        </button>
+                        <div id="myModal" class="modal fade">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span></button>
+                                        <h4 class="modal-title">Preview</h4>
+                                    </div>
+                                    <div class="modal-body">
+                                        <iframe width=100% height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+                                                frameborder="0" allowfullscreen></iframe>
+                                    </div>
+                                    <div class="modal-footer">
+
+                                    </div>
+                                </div>
+                                <!-- /.modal-content -->
+                            </div>
+                            <!-- /.modal-dialog -->
+                        </div>
+                        <!-- /.modal -->
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-2"></div>
+        <div class="col-md-4">
+            <div class="thumbnail">
+                <img src="http://ia.media-imdb.com/images/M/MV5BMjE1MTM4NDAzOF5BMl5BanBnXkFtZTgwNTMwNjI0MzE@._V1_SX640_SY720_.jpg">
+            </div>
+        </div>
+    </div>
+
+    <div class="row bottomPage">
+
+    </div>
+
+</div>
+
 
 </div>
