--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -29,7 +29,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="#">Actors</a></li>
                             <li><a href="#">Movies</a></li>
-                            <li><a href="#">Tv show</a></li>
+                            <li><a ui-sref="tvshow">Tv show</a></li>
                         </ul>
                     </li>
                     <li>
