--- a/public/views/movie.html
+++ b/public/views/movie.html
@@ -3,12 +3,12 @@
 
 <div class="container-fluid">
     <div class="row topPage">
-        <div class="col-md-6 ">
+        <div class="col-md-6 col-xs-12">
             <div class="row">
-                <div class="col-md-10">
+                <div class="col-md-10 col-xs-12">
                     <h1>Fifty Shades Of Grey</h1>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 col-xs-offset-0">
                     <a href="https://geo.itunes.apple.com/fr/movie/cinquante-nuances-de-grey/id962931571?mt=6"
                        style="display:inline-block;overflow:hidden;background:url(http://linkmaker.itunes.apple.com/images/badges/en-us/badge_itunes-lrg.svg) no-repeat;width:165px;height:40px;"></a>
                 </div>
@@ -21,32 +21,22 @@
                 </ul>
 
                 <div class="row jumbotron">
-                    <div class="textInJumbotron">
-                        <p>
-                            Literature student Anastasia Steele's life changes forever when she meets handsome, yet
-                            tormented, billionaire Christian Grey.
-                        </p>
-                    </div>
+                    <p>
+                        Literature student Anastasia Steele's life changes forever when she meets handsome, yet
+                        tormented, billionaire Christian Grey.
+                    </p>
                 </div>
                 <div class="row">
-                    <div id="mediaControl" class="col-md-4 col-md-8">
-                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">
+                    <div id="mediaControl" class="col-xs-12 col-md-8">
+                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#preview">
                             Bande annonce
                         </button>
-                        <div id="myModal" class="modal fade">
+                        <div id="preview" class="modal fade">
                             <div class="modal-dialog">
                                 <div class="modal-content">
-                                    <div class="modal-header">
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span></button>
-                                        <h4 class="modal-title">Preview</h4>
-                                    </div>
                                     <div class="modal-body">
                                         <iframe width=100% height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ"
                                                 frameborder="0" allowfullscreen></iframe>
-                                    </div>
-                                    <div class="modal-footer">
-
                                     </div>
                                 </div>
                                 <!-- /.modal-content -->
@@ -57,10 +47,12 @@
 
                     </div>
                 </div>
+                <div class="row">
+                </div>
             </div>
         </div>
         <div class="col-md-2"></div>
-        <div class="col-md-4">
+        <div class="col-md-4  col-xs-12">
             <div class="thumbnail">
                 <img src="http://ia.media-imdb.com/images/M/MV5BMjE1MTM4NDAzOF5BMl5BanBnXkFtZTgwNTMwNjI0MzE@._V1_SX640_SY720_.jpg">
             </div>
