--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -15,12 +15,13 @@
                 <a class="navbar-brand" href="#">CornPub</a>
             </div>
             <form class="navbar-form navbar-left" role="search">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Search...">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search..."/>
+                    <div class="input-group-btn">
+                        <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span>
+                        </button>
+                    </div>
                 </div>
-                <button type="submit" class="btn btn-default">
-                    <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-                </button>
             </form>
             <div class="collapse navbar-collapse" id="navbar-collapse-umovie">
                 <ul class="nav navbar-nav">
