actor page added, in progress

--- a/public/views/actor.html
+++ b/public/views/actor.html
@@ -1,8 +1,60 @@
 <div ng-include="'views/navbar.html'"></div>
 
-<div class="container">
+<div class="container-fluid">
+    <div class="row">
+        <div class="actor-info col-xs-12 col-md-4">
+            <img class="actor-photo" src="http://ia.media-imdb.com/images/M/MV5BNzAzNjg5MDE3N15BMl5BanBnXkFtZTcwMjIxNzU0OA@@._V1_UX214_CR0,0,214,317_AL_.jpg">
 
+            </img>
+            <h3 class="actor-name">
+                Joaquin Phoenix
+            </h3>
+            <h3 class="actor-movie-genre">
+                Drama
+            </h3>
+        </div>
+        <div class="movie-list col-xs-12 col-md-4">
+            <h3>Movies</h3>
+            <ul>
+                <li class="">
+                    <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMjA1Nzk0OTM2OF5BMl5BanBnXkFtZTgwNjU2NjEwMDE@._V1_UX148_CR0,0,148,200_AL_.jpg"/>
+                    <h4>Title: Her</h4>
+                </li>
+                <li class="">
+                    <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMjA1Nzk0OTM2OF5BMl5BanBnXkFtZTgwNjU2NjEwMDE@._V1_UX148_CR0,0,148,200_AL_.jpg"/>
+                    <h4>Title: Her</h4>
+                </li>
+                <li class="">
+                    <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMjA1Nzk0OTM2OF5BMl5BanBnXkFtZTgwNjU2NjEwMDE@._V1_UX148_CR0,0,148,200_AL_.jpg"/>
+                    <h4>Title: Her</h4>
+                </li>
+                <li class="">
+                    <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMjA1Nzk0OTM2OF5BMl5BanBnXkFtZTgwNjU2NjEwMDE@._V1_UX148_CR0,0,148,200_AL_.jpg"/>
+                    <h4>Title: Her</h4>
+                </li>
+            </ul>
+        </div>
+        <div class="serie-list col-xs-12 col-md-4">
+            <h3>Series</h3>
+            <ul>
+                <li class="">
+                    <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMTgwMzQzNTQ1Ml5BMl5BanBnXkFtZTgwMDY2NTYxMTE@._V1_UX148_CR0,0,148,200_AL_.jpg"/>
+                    <h4>Title: Gladiator</h4>
+                </li>
+                <li class="">
+                    <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMTgwMzQzNTQ1Ml5BMl5BanBnXkFtZTgwMDY2NTYxMTE@._V1_UX148_CR0,0,148,200_AL_.jpg"/>
+                    <h4>Title: Gladiator</h4>
+                </li>
+                <li class="">
+                    <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMTgwMzQzNTQ1Ml5BMl5BanBnXkFtZTgwMDY2NTYxMTE@._V1_UX148_CR0,0,148,200_AL_.jpg"/>
+                    <h4>Title: Gladiator</h4>
+                </li>
+                <li class="">
+                    <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMTgwMzQzNTQ1Ml5BMl5BanBnXkFtZTgwMDY2NTYxMTE@._V1_UX148_CR0,0,148,200_AL_.jpg"/>
+                    <h4>Title: Gladiator</h4>
+                </li>
+            </ul>
+        </div>
+    </div>
 
-    <!-- Code here -->
-    
 </div>
