--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -28,7 +28,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Content<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Actors</a></li>
+                            <li><a ui-sref="actor">Actors</a></li>
                             <li><a ui-sref="movie">Movies</a></li>
                             <li><a href="#">Tv show</a></li>
                         </ul>
