--- a/public/views/actor.html
+++ b/public/views/actor.html
@@ -2,56 +2,62 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="actor-info col-xs-12 col-md-4">
-            <img class="actor-photo" src="http://ia.media-imdb.com/images/M/MV5BNzAzNjg5MDE3N15BMl5BanBnXkFtZTcwMjIxNzU0OA@@._V1_UX214_CR0,0,214,317_AL_.jpg">
+        <div class="actor-column">
+            <div class="actor-info col-xs-12 col-md-4">
+                <img class="actor-photo" src="http://ia.media-imdb.com/images/M/MV5BNzAzNjg5MDE3N15BMl5BanBnXkFtZTcwMjIxNzU0OA@@._V1_UX214_CR0,0,214,317_AL_.jpg">
 
-            </img>
-            <h3 class="actor-name">
-                Joaquin Phoenix
-            </h3>
-            <h3 class="actor-movie-genre">
-                Drama
-            </h3>
+                </img>
+                <h3 class="actor-name">
+                    Joaquin Phoenix
+                </h3>
+                <h3 class="actor-genre">
+                    Drama
+                </h3>
+            </div>
+            <div class="itune-link">
+                <a href="https://geo.itunes.apple.com/fr/movie/cinquante-nuances-de-grey/id962931571?mt=6"
+                   style="display:inline-block;overflow:hidden;background:url(http://linkmaker.itunes.apple.com/images/badges/en-us/badge_itunes-lrg.svg) no-repeat;width:165px;height:40px;"></a>
+            </div>
         </div>
-        <div class="movie-list col-xs-12 col-md-4">
-            <h3>Movies</h3>
+        <div class="movie-column col-xs-12 col-md-4">
+            <h3 class="movie-column-title">Movies</h3>
             <ul>
                 <li class="">
                     <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMjA1Nzk0OTM2OF5BMl5BanBnXkFtZTgwNjU2NjEwMDE@._V1_UX148_CR0,0,148,200_AL_.jpg"/>
-                    <h4>Title: Her</h4>
+                    <h4>Her</h4>
                 </li>
                 <li class="">
                     <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMjA1Nzk0OTM2OF5BMl5BanBnXkFtZTgwNjU2NjEwMDE@._V1_UX148_CR0,0,148,200_AL_.jpg"/>
-                    <h4>Title: Her</h4>
+                    <h4>Her</h4>
                 </li>
                 <li class="">
                     <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMjA1Nzk0OTM2OF5BMl5BanBnXkFtZTgwNjU2NjEwMDE@._V1_UX148_CR0,0,148,200_AL_.jpg"/>
-                    <h4>Title: Her</h4>
+                    <h4>Her</h4>
                 </li>
                 <li class="">
                     <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMjA1Nzk0OTM2OF5BMl5BanBnXkFtZTgwNjU2NjEwMDE@._V1_UX148_CR0,0,148,200_AL_.jpg"/>
-                    <h4>Title: Her</h4>
+                    <h4>Her</h4>
                 </li>
             </ul>
         </div>
-        <div class="serie-list col-xs-12 col-md-4">
-            <h3>Series</h3>
+        <div class="serie-column col-xs-12 col-md-4">
+            <h3 class="serie-column-title">Series</h3>
             <ul>
                 <li class="">
-                    <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMTgwMzQzNTQ1Ml5BMl5BanBnXkFtZTgwMDY2NTYxMTE@._V1_UX148_CR0,0,148,200_AL_.jpg"/>
-                    <h4>Title: Gladiator</h4>
+                    <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMjA3NzMyMzU1MV5BMl5BanBnXkFtZTcwNjc1ODUwMg@@._V1_UY200_CR4,0,148,200_AL_.jpg"/>
+                    <h4>Lost</h4>
                 </li>
                 <li class="">
-                    <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMTgwMzQzNTQ1Ml5BMl5BanBnXkFtZTgwMDY2NTYxMTE@._V1_UX148_CR0,0,148,200_AL_.jpg"/>
-                    <h4>Title: Gladiator</h4>
+                    <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMjA3NzMyMzU1MV5BMl5BanBnXkFtZTcwNjc1ODUwMg@@._V1_UY200_CR4,0,148,200_AL_.jpg"/>
+                    <h4>Lost</h4>
                 </li>
                 <li class="">
-                    <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMTgwMzQzNTQ1Ml5BMl5BanBnXkFtZTgwMDY2NTYxMTE@._V1_UX148_CR0,0,148,200_AL_.jpg"/>
-                    <h4>Title: Gladiator</h4>
+                    <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMjA3NzMyMzU1MV5BMl5BanBnXkFtZTcwNjc1ODUwMg@@._V1_UY200_CR4,0,148,200_AL_.jpg"/>
+                    <h4>Lost</h4>
                 </li>
                 <li class="">
-                    <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMTgwMzQzNTQ1Ml5BMl5BanBnXkFtZTgwMDY2NTYxMTE@._V1_UX148_CR0,0,148,200_AL_.jpg"/>
-                    <h4>Title: Gladiator</h4>
+                    <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMjA3NzMyMzU1MV5BMl5BanBnXkFtZTcwNjc1ODUwMg@@._V1_UY200_CR4,0,148,200_AL_.jpg"/>
+                    <h4>Lost</h4>
                 </li>
             </ul>
         </div>
