actor page , navbar tvshow link

--- a/public/views/actor.html
+++ b/public/views/actor.html
@@ -2,8 +2,8 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="actor-column">
-            <div class="actor-info col-xs-12 col-md-4">
+        <div class="actor-column col-xs-12 col-md-4">
+            <div class="actor-info ">
                 <img class="actor-photo" src="http://ia.media-imdb.com/images/M/MV5BNzAzNjg5MDE3N15BMl5BanBnXkFtZTcwMjIxNzU0OA@@._V1_UX214_CR0,0,214,317_AL_.jpg">
 
                 </img>
@@ -23,20 +23,33 @@
             <h3 class="movie-column-title">Movies</h3>
             <ul>
                 <li class="">
+
                     <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMjA1Nzk0OTM2OF5BMl5BanBnXkFtZTgwNjU2NjEwMDE@._V1_UX148_CR0,0,148,200_AL_.jpg"/>
-                    <h4>Her</h4>
+                    <div class="movie-info">
+                        <h4>Her</h4>
+                        <h4>Release date : june 1 2016</h4>
+                    </div>
                 </li>
                 <li class="">
                     <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMjA1Nzk0OTM2OF5BMl5BanBnXkFtZTgwNjU2NjEwMDE@._V1_UX148_CR0,0,148,200_AL_.jpg"/>
-                    <h4>Her</h4>
+                    <div class="movie-info">
+                        <h4>Her</h4>
+                        <h4>Release date : june 1 2016</h4>
+                    </div>
                 </li>
                 <li class="">
                     <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMjA1Nzk0OTM2OF5BMl5BanBnXkFtZTgwNjU2NjEwMDE@._V1_UX148_CR0,0,148,200_AL_.jpg"/>
-                    <h4>Her</h4>
+                    <div class="movie-info">
+                        <h4>Her</h4>
+                        <h4>Release date : june 1 2016</h4>
+                    </div>
                 </li>
                 <li class="">
                     <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMjA1Nzk0OTM2OF5BMl5BanBnXkFtZTgwNjU2NjEwMDE@._V1_UX148_CR0,0,148,200_AL_.jpg"/>
-                    <h4>Her</h4>
+                    <div class="movie-info">
+                        <h4>Her</h4>
+                        <h4>Release date : june 1 2016</h4>
+                    </div>
                 </li>
             </ul>
         </div>
