--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -30,7 +30,7 @@
                         <ul class="dropdown-menu">
                             <li><a ui-sref="actor">Actors</a></li>
                             <li><a ui-sref="movie">Movies</a></li>
-                            <li><a href="#">Tv show</a></li>
+                            <li><a ui-sref="tvshow">Tv show</a></li>
                         </ul>
                     </li>
                     <li>
