--- a/public/css/actor.css
+++ b/public/css/actor.css
@@ -1,5 +1,4 @@
 .row {
-    width: 1200px;
 }
 
 h2 {
@@ -84,6 +83,10 @@ h4 {
     float: left;
     width: 350px;
     text-align: center;
+}
+
+.movie-info {
+    float: left;
 }
 
 ul {
