--- a/public/views/tvshow.html
+++ b/public/views/tvshow.html
@@ -4,7 +4,7 @@
     <div class="row topPage">
         <div class="col-md-8">
             <div class="row">
-                <div class="col-md-7 movieTitle">
+                <div class="col-md-7 col-sm-7 col-xs-12 movieTitle">
                     <h1>South Park</h1>
                     <div>
                         <ul class="list-inline pointedList">
@@ -14,9 +14,9 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-5 col-sm-5 col-xs-12">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-7">
                             <div id="previewButton">
                                 <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myVideoModal">
                                     Bande annonce
@@ -38,9 +38,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-5">
                             <div id="appleButton">
-                                <a href="https://geo.itunes.apple.com/ca/movie/avengers-age-of-ultron/id983441161?mt=6" style="display:inline-block;overflow:hidden;background:url(http://linkmaker.itunes.apple.com/images/badges/en-us/badge_itunes-lrg.svg) no-repeat;width:165px;height:40px;"></a>
+                                <a href="https://geo.itunes.apple.com/ca/movie/avengers-age-of-ultron/id983441161?mt=6"></a>
                             </div>
                         </div>
                     </div>
