--- a/public/views/actor.html
+++ b/public/views/actor.html
@@ -14,15 +14,16 @@
                     Drama
                 </h3>
             </div>
-            <div class="itune-link">
-                <a href="https://geo.itunes.apple.com/fr/movie/cinquante-nuances-de-grey/id962931571?mt=6"
-                   style="display:inline-block;overflow:hidden;background:url(http://linkmaker.itunes.apple.com/images/badges/en-us/badge_itunes-lrg.svg) no-repeat;width:165px;height:40px;"></a>
+            <div class="imdb-link">
+                <a href="http://www.imdb.com/name/nm0001618/?ref_=nv_sr_1">
+                    <img src="http://ia.media-imdb.com/images/M/MV5BMTgyOTIzMTA0NV5BMl5BcG5nXkFtZTcwMTA3MDg2OA@@._V1_.png"/>
+                </a>
             </div>
         </div>
         <div class="movie-column col-xs-12 col-md-4">
             <h3 class="movie-column-title">Movies</h3>
-            <ul>
-                <li class="">
+            <ul class="movie-list">
+                <li class="movie-list-element">
 
                     <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMjA1Nzk0OTM2OF5BMl5BanBnXkFtZTgwNjU2NjEwMDE@._V1_UX148_CR0,0,148,200_AL_.jpg"/>
                     <div class="movie-info">
@@ -30,21 +31,21 @@
                         <h4>Release date : june 1 2016</h4>
                     </div>
                 </li>
-                <li class="">
+                <li class="movie-list-element">
                     <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMjA1Nzk0OTM2OF5BMl5BanBnXkFtZTgwNjU2NjEwMDE@._V1_UX148_CR0,0,148,200_AL_.jpg"/>
                     <div class="movie-info">
                         <h4>Her</h4>
                         <h4>Release date : june 1 2016</h4>
                     </div>
                 </li>
-                <li class="">
+                <li class="movie-list-element">
                     <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMjA1Nzk0OTM2OF5BMl5BanBnXkFtZTgwNjU2NjEwMDE@._V1_UX148_CR0,0,148,200_AL_.jpg"/>
                     <div class="movie-info">
                         <h4>Her</h4>
                         <h4>Release date : june 1 2016</h4>
                     </div>
                 </li>
-                <li class="">
+                <li class="movie-list-element">
                     <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMjA1Nzk0OTM2OF5BMl5BanBnXkFtZTgwNjU2NjEwMDE@._V1_UX148_CR0,0,148,200_AL_.jpg"/>
                     <div class="movie-info">
                         <h4>Her</h4>
@@ -55,20 +56,20 @@
         </div>
         <div class="serie-column col-xs-12 col-md-4">
             <h3 class="serie-column-title">Series</h3>
-            <ul>
-                <li class="">
+            <ul class="movie-list">
+                <li class="movie-list-element">
                     <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMjA3NzMyMzU1MV5BMl5BanBnXkFtZTcwNjc1ODUwMg@@._V1_UY200_CR4,0,148,200_AL_.jpg"/>
                     <h4>Lost</h4>
                 </li>
-                <li class="">
+                <li class="movie-list-element">
                     <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMjA3NzMyMzU1MV5BMl5BanBnXkFtZTcwNjc1ODUwMg@@._V1_UY200_CR4,0,148,200_AL_.jpg"/>
                     <h4>Lost</h4>
                 </li>
-                <li class="">
+                <li class="movie-list-element">
                     <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMjA3NzMyMzU1MV5BMl5BanBnXkFtZTcwNjc1ODUwMg@@._V1_UY200_CR4,0,148,200_AL_.jpg"/>
                     <h4>Lost</h4>
                 </li>
-                <li class="">
+                <li class="movie-list-element">
                     <img class="movie-photo" src="http://ia.media-imdb.com/images/M/MV5BMjA3NzMyMzU1MV5BMl5BanBnXkFtZTcwNjc1ODUwMg@@._V1_UY200_CR4,0,148,200_AL_.jpg"/>
                     <h4>Lost</h4>
                 </li>
