--- a/public/css/actor.css
+++ b/public/css/actor.css
@@ -1,22 +1,11 @@
 .row {
 }
 
-h2 {
-   margin-left: 0px;
-}
-
-h3 {
-
-}
-
-h4 {
-    margin-left: 0px;
-}
-
 .actor-column{
     position: relative;
     float: left;
-    width: 300px;
+    width: 290px;
+    margin-right: 30px;
 }
 
 .actor-info {
@@ -57,7 +46,7 @@ h4 {
     padding: 5px;
 }
 
-.itune-link {
+.imdb-link {
     float: left;
     position: relative;
     padding-top: 5px;
@@ -89,11 +78,11 @@ h4 {
     float: left;
 }
 
-ul {
+.movie-list {
     padding-left: 0px;
 }
 
-li {
+.movie-list-element {
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 0px;
