--- a/public/views/movie.html
+++ b/public/views/movie.html
@@ -3,7 +3,7 @@
 
 <div class="container-fluid">
     <div class="row topPage">
-        <div class="col-md-6 col-xs-12">
+        <div class="col-md-6 col-sm-7 col-xs-12">
             <div class="row">
                 <div class="col-md-10 col-xs-12">
                     <h1>Fifty Shades Of Grey</h1>
@@ -51,8 +51,8 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-2"></div>
-        <div class="col-md-4  col-xs-12">
+        <div class="col-md-2 col-sm-1 col-xs-offset-0"></div>
+        <div class="col-md-4  col-sm-3 col-xs-12">
             <div class="thumbnail">
                 <img src="http://ia.media-imdb.com/images/M/MV5BMjE1MTM4NDAzOF5BMl5BanBnXkFtZTgwNTMwNjI0MzE@._V1_SX640_SY720_.jpg">
             </div>
@@ -62,8 +62,5 @@
     <div class="row bottomPage">
 
     </div>
-
-</div>
-
 
 </div>
